# CatBlast

./: Cargo.toml  README.md
.github/workflows/: release.yml
doc/: battle.md
src/: main.rs  state.rs
src/plugins/: mod.rs
src/plugins/core/: actions.rs  components.rs  messages.rs  mod.rs  resources.rs  systems.rs
src/plugins/match3/: components.rs  message.rs  mod.rs  resources.rs  state.rs  system.rs
src/plugins/match3/components/: animation.rs  character.rs  gem.rs  hud.rs  mod.rs
src/plugins/match3/resources/: board.rs  config.rs  gem_atlas.rs  hud.rs  mod.rs  score.rs  selection.rs  swap.rs
src/plugins/match3/systems/: animation.rs  detection.rs  gravity.rs  hud.rs  input.rs  mod.rs  processing.rs  regenerate.rs  solver.rs  swap.rs  visual.rs
src/plugins/ui/: button_builder.rs  components.rs  mod.rs  navigation.rs  resources.rs
src/plugins/ui/main_menu/: components.rs  mod.rs
src/plugins/ui/main_menu/systems/: mod.rs
src/plugins/ui/overlays/: components.rs  messages.rs  mod.rs
src/plugins/ui/overlays/settings/: components.rs  mod.rs
src/plugins/ui/overlays/settings/systems/: mod.rs
src/plugins/ui/settings/: components.rs  mod.rs
src/plugins/ui/settings/systems/: mod.rs
src/plugins/ui/systems/: mod.rs  navigation.rs
