[package]
name = "CatBlast"
version = "0.1.0"
edition = "2024"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
dev-fast-build = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.17" }
rand = "0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
